--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,6 @@ browser=chrome
 username=johndoe
 smartbearUrl=http://secure.smartbearsoftware.com/samples/testcomplete12/WebOrders/login.aspx
 searchValue=aston martin
+smartbear_username=Tester
+smartbear_password=test
+banana=whatever
